<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity">


    <EditText
            android:id="@+id/etTerm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnSearch"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/etTerm" />

    <Button
            android:id="@+id/btnSortByUpVotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_upvote"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnSortByDownVotes"
            app:layout_constraintTop_toBottomOf="@id/etTerm" />

    <Button
            android:id="@+id/btnSortByDownVotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_downvotes"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/btnSortByUpVotes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnSortByUpVotes" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDefinitions"
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btnSortByDownVotes"
            tools:listitem="@layout/view_holder_word" />


    <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/llMessageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

        <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/dummy_message" />

        <Button
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:text="@string/retry"
                android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>